--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,9 @@
 # populate this file with your own API keys
 # then rename to .env when you are done
 
+PORT=
+CONNECTION_STRING=
+
 # do not change these
 ATTENTIS_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoxLCJpYXQiOjE1MzY1NDA2MzF9.-cKeJRU6l1xVDgBoz2uZr0Ry3lFeG2uZHKzV-y2ePgQ
 WUNDERGROUND_KEY=e1f10a1e78da46f5b10a1e78da96f525
