--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,21 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "app": "nodemon src/app.js",
+    "dev": "nodemon src/app.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write ./**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc.json"
   },
   "type": "module",
   "dependencies": {
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "geofire-common": "^6.0.0",
-    "mongoose": "^8.3.3"
+    "mongoose": "^8.3.3",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
