--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,14 @@
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "geofire-common": "^6.0.0",
+    "md5": "^2.3.0",
     "mongoose": "^8.3.3",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
