logging - winston seq

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,6 +3,7 @@
 
 PORT=
 CONNECTION_STRING=
+SEQ_KEY=
 
 # do not change these
 ATTENTIS_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoxLCJpYXQiOjE1MzY1NDA2MzF9.-cKeJRU6l1xVDgBoz2uZr0Ry3lFeG2uZHKzV-y2ePgQ
