--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@datalust/winston-seq": "^2.0.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
@@ -21,7 +22,8 @@
     "md5": "^2.3.0",
     "mongoose": "^8.3.3",
     "node-cron": "^3.0.3",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
