--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     depends_on:
       - mongodb
       - seq
+    volumes:
+      - server-public:/app/public/
 
   # client:
   #   container_name: client
@@ -35,7 +37,7 @@ services:
     ports:
       - "${MONGO_LOCAL_PORT}:${MONGO_DOCKER_PORT}"
     volumes:
-      - ~/mongo:/data/db
+      - mongo:/data/db
 
   seq:
     container_name: seq
@@ -47,4 +49,9 @@ services:
       - "${SEQ_LOCAL_PORT}:${SEQ_DOCKER_PORT}"
       - "${SEQ_INGESTION_LOCAL_PORT}:${SEQ_INGESTION_DOCKER_PORT}"
     volumes:
-      - ~/seq:/data
+      - logs:/data
+
+volumes:
+  server-public:
+  mongo:
+  logs:
