--- a/.env.example
+++ b/.env.example
@@ -7,10 +7,10 @@ MONGO_DOCKER_PORT=27017
 NODE_LOCAL_PORT=5000
 NODE_DOCKER_PORT=5000
 
-REACT_LOCAL_PORT=80
-REACT_DOCKER_PORT=80
-
 SEQ_LOCAL_PORT=8080
 SEQ_DOCKER_PORT=80
 SEQ_INGESTION_LOCAL_PORT=5341
 SEQ_INGESTION_DOCKER_PORT=5341
+
+NGINX_LOCAL_PORT=80
+NGINX_DOCKER_PORT=80
