--- a/Caddyfile
+++ b/Caddyfile
@@ -2,6 +2,6 @@ api.zephyrapp.nz www.api.zephyrapp.nz {
   reverse_proxy server:5000
 }
 
-logs.zephyrapp.nz www.logs.zephyrapp.nz {
-  reverse_proxy seq:9000
-}
+// logs.zephyrapp.nz www.logs.zephyrapp.nz {
+//   reverse_proxy seq:9000
+// }
