--- a/Caddyfile
+++ b/Caddyfile
@@ -1,3 +1,7 @@
 api.zephyrapp.nz www.api.zephyrapp.nz {
 	reverse_proxy server:5000
 }
+
+logs.zephyrapp.nz logs.api.zephyrapp.nz {
+	reverse_proxy seq:9000
+}
