--- a/Caddyfile
+++ b/Caddyfile
@@ -2,6 +2,6 @@ api.zephyrapp.nz www.api.zephyrapp.nz {
 	reverse_proxy server:5000
 }
 
-logs.zephyrapp.nz logs.api.zephyrapp.nz {
-	reverse_proxy seq:9000
+web.zephyrapp.nz www.web.zephyrapp.nz {
+	reverse_proxy client:3000
 }
