--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "md5": "^2.3.0",
     "mongoose": "^8.3.3",
     "node-cron": "^3.0.3",
+    "node-dir": "^0.1.17",
     "sharp": "^0.33.3",
     "winston": "^3.13.0"
   },
