--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,8 @@ MONGO_DOCKER_PORT=27017
 NODE_LOCAL_PORT=5000
 NODE_DOCKER_PORT=5000
 
-SEQ_LOCAL_PORT=8080
+SEQ_LOCAL_PORT=9000
 SEQ_DOCKER_PORT=80
 SEQ_INGESTION_LOCAL_PORT=5341
 SEQ_INGESTION_DOCKER_PORT=5341
+SEQ_INGESTION_URL='http://seq:5341'
