--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ SEQ_DOCKER_PORT=80
 SEQ_INGESTION_LOCAL_PORT=5341
 SEQ_INGESTION_DOCKER_PORT=5341
 SEQ_INGESTION_URL='http://seq:5341'
+
+REACT_LOCAL_PORT=3000
+REACT_DOCKER_PORT=80
