--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,8 @@
 # Stage 1
-FROM  node:lts-alpine AS builder
+FROM  node:lts-alpine AS build
 WORKDIR /app
 COPY package.json .
 RUN npm install
 COPY . .
-RUN npm run build
-
-# Stage 2
-FROM nginx:stable-alpine-slim
-COPY --from=builder /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+ENV NODE_ENV='production'
+CMD ["npm", "run", "build"]
