--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,6 +3,6 @@ WORKDIR /app
 COPY package.json .
 RUN npm install
 COPY . .
-EXPOSE 5000
+EXPOSE ${NODE_DOCKER_PORT}
 ENV NODE_ENV='production'
 CMD ["npm", "start"]
