--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,8 @@ services:
     container_name: caddy
     image: caddy:alpine
     restart: unless-stopped
+    environment:
+      - NODE_PORT=${NODE_LOCAL_PORT}
     ports:
       - "80:80"
       - "443:443"
