--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,7 @@ MONGO_PASSWORD='PASSWORD'
 MONGO_LOCAL_PORT=27017
 MONGO_DOCKER_PORT=27017
 
-NODE_LOCAL_PORT=5000
-NODE_DOCKER_PORT=5000
+NODE_PORT=5000
 
 SEQ_LOCAL_PORT=9000
 SEQ_DOCKER_PORT=80
