--- a/Caddyfile
+++ b/Caddyfile
@@ -1,4 +1,4 @@
-api.zephyrapp.nz www.api.zephyrapp.nz {
+api.zephyrapp.nz {
 	reverse_proxy server:{$NODE_PORT}
 }
 
@@ -7,4 +7,8 @@ web.zephyrapp.nz {
 	encode gzip
 	try_files {path} /index.html
 	file_server
+}
+
+logs.zephyrapp.nz {
+	reverse_proxy seq:{$SEQ_PORT}
 }
