docker compose - separate client/server

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,6 +1,10 @@
 # populate this file with your own API keys
 # then rename to .env when you are done
 
+# docker config
+REACT_LOCAL_PORT=3000
+REACT_DOCKER_PORT=80
+
 # create an account at https://account.mapbox.com/
 # then follow the docs to create your own key
 # both of the following can be the same
