--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,23 @@
 # populate this file with your own API keys
 # then rename to .env when you are done
 
-PORT=
-CONNECTION_STRING=
-SEQ_KEY=
+# docker config
+MONGO_CONNECTION_STRING=
+MONGO_USER=
+MONGO_PASSWORD=
+MONGO_LOCAL_PORT=27017
+MONGO_DOCKER_PORT=27017
+
+NODE_PORT=5000
+
+SEQ_LOCAL_PORT=9000
+SEQ_DOCKER_PORT=80
+SEQ_INGESTION_LOCAL_PORT=5341
+SEQ_INGESTION_DOCKER_PORT=5341
+SEQ_INGESTION_URL='http://seq:5341'
+
+DEV_CONNECTION_STRING='mongodb://127.0.0.1:27017/zephyr'
+DEV_SEQ_URL='http://localhost:5341'
 
 # do not change these
 ATTENTIS_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoxLCJpYXQiOjE1MzY1NDA2MzF9.-cKeJRU6l1xVDgBoz2uZr0Ry3lFeG2uZHKzV-y2ePgQ
