--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - '443:443'
     volumes:
       - $PWD/Caddyfile:/etc/caddy/Caddyfile
-      - client_build:/srv
+      - caddy_srv:/srv
       - caddy_data:/data
       - caddy_config:/config
     depends_on:
@@ -25,5 +25,6 @@ services:
 
 volumes:
   client_build:
+  caddy_srv:
   caddy_data:
   caddy_config:
