--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   server:
     build:
-      context: ./
+      context: ./server
     restart: unless-stopped
     env_file: ./.env
     environment:
@@ -21,7 +21,7 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
     ports:
-      - '${MONGO_LOCAL_PORT}:${MONGO_DOCKER_PORT}'
+      - "${MONGO_LOCAL_PORT}:${MONGO_DOCKER_PORT}"
     volumes:
       - mongo:/data/db
 
@@ -33,29 +33,43 @@ services:
       - ACCEPT_EULA=Y
       - SEQ_INGESTION_URL=${SEQ_INGESTION_URL}
     ports:
-      - '${SEQ_LOCAL_PORT}:${SEQ_DOCKER_PORT}'
-      - '${SEQ_INGESTION_LOCAL_PORT}:${SEQ_INGESTION_DOCKER_PORT}'
+      - "${SEQ_LOCAL_PORT}:${SEQ_DOCKER_PORT}"
+      - "${SEQ_INGESTION_LOCAL_PORT}:${SEQ_INGESTION_DOCKER_PORT}"
     volumes:
       - logs:/data
 
+  client:
+    container_name: client
+    build:
+      context: ./client
+    ports:
+      - "${REACT_LOCAL_PORT}:${REACT_DOCKER_PORT}"
+    volumes:
+      - client_build:/app/build
+
   caddy:
-    container_name: caddy-server
+    container_name: caddy
     image: caddy:alpine
     restart: unless-stopped
     environment:
       - NODE_PORT=${NODE_PORT}
       - SEQ_PORT=${SEQ_DOCKER_PORT}
     ports:
-      - '80:80'
-      - '443:443'
+      - "80:80"
+      - "443:443"
     volumes:
       - $PWD/Caddyfile:/etc/caddy/Caddyfile
+      - client_build:/srv
       - caddy_data:/data
       - caddy_config:/config
     depends_on:
       - server
+      - client
 
 volumes:
+  server_public:
+  mongo:
+  logs:
   client_build:
   caddy_data:
   caddy_config:
