--- a/Caddyfile
+++ b/Caddyfile
@@ -2,7 +2,7 @@ api.zephyrapp.nz {
 	reverse_proxy server:{$NODE_PORT}
 }
 
-web.zephyrapp.nz {
+zephyrapp.nz www.zephyrapp.nz {
 	root * /srv
 	encode gzip
 	try_files {path} /index.html
