--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-MONGO_CONNECTION_STRING='mongodb://USERNAME:PASSWORD@mongodb:27017/DATABASE?authSource=admin'
+# set a USERNAME and PASSWORD for mongo db
+# then rename file to .env when you are done
+MONGO_CONNECTION_STRING='mongodb://USERNAME:PASSWORD@mongodb:27017/zephyr?authSource=admin'
 MONGO_USER='USERNAME'
 MONGO_PASSWORD='PASSWORD'
 MONGO_LOCAL_PORT=27017
