--- a/client/.env.example
+++ b/client/.env.example
@@ -13,5 +13,8 @@ REACT_APP_EMAILJS_SERVICE_ID=
 REACT_APP_EMAILJS_TEMPLATE_ID=
 REACT_APP_EMAILJS_PUBLIC_KEY=
 
+# bank acc string for donation page
+REACT_APP_DONATION_BANK_ACCOUNT=
+
 # allow hot reload
 FAST_REFRESH = false
