--- a/server/.env.example
+++ b/server/.env.example
@@ -9,6 +9,7 @@ SEQ_KEY=
 ATTENTIS_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoxLCJpYXQiOjE1MzY1NDA2MzF9.-cKeJRU6l1xVDgBoz2uZr0Ry3lFeG2uZHKzV-y2ePgQ
 WUNDERGROUND_KEY=e1f10a1e78da46f5b10a1e78da96f525
 TEMPEST_KEY='a8f5dbda-af0a-4b57-99b9-f10baa88f27b'
+SOFAROCEAN_KEY='1bc9848d3e524c34a1eb220e121d9a9e'
 
 # get your own from the providers
 HOLFUY_KEY=
