--- a/server/.env.example
+++ b/server/.env.example
@@ -17,6 +17,7 @@ HARVEST_FENZ_KEY=
 WINDGURU_KEY=
 HARVEST_REALJOURNEYS_USERNAME=
 HARVEST_REALJOURNEYS_PASSWORD=
+PREDICTWIND_KEY=
 
 # create an account at https://www.emailjs.com/
 # then follow the docs to create your own keys
