--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
+    "fuse.js": "^7.1.0",
     "geofire-common": "^6.0.0",
     "mapbox-gl": "^3.2.0",
     "react": "^18.2.0",
