strip down for catalunya

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,19 +1,19 @@
-api.zephyrapp.nz {
+api.cat.zephyrapp.nz {
 	reverse_proxy server:{$NODE_PORT}
 }
 
-zephyrapp.nz www.zephyrapp.nz {
+cat.zephyrapp.nz {
 	root * /srv
 	encode gzip
 	try_files {path} /index.html
 	file_server
 }
 
-fs.zephyrapp.nz {
+fs.cat.zephyrapp.nz {
 	root * /var/www
 	file_server
 }
 
-logs.zephyrapp.nz {
+logs.cat.zephyrapp.nz {
 	reverse_proxy seq:{$SEQ_PORT}
 }
