--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Zephyr",
-  "name": "Zephyr",
+  "short_name": "Zephyr Cat",
+  "name": "Zephyr Catalunya",
   "icons": [
     {
       "src": "favicon.ico",
@@ -18,7 +18,8 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
