--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "geofire-common": "^6.0.0",
+    "iconv-lite": "^0.6.3",
     "md5": "^2.3.0",
     "mongoose": "^8.3.3",
     "node-cron": "^3.0.3",
