--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,8 @@
 # populate this file with your own API keys
 # then rename to .env when you are done
 
-DEV_CONNECTION_STRING=
-DEV_SEQ_URL=
+DB_CONNECTION_STRING=
+SEQ_INGESTION_URL=
 
 # create an account at https://www.emailjs.com/
 # then follow the docs to create your own keys
