--- a/client/.env.example
+++ b/client/.env.example
@@ -1,6 +1,10 @@
 # populate this file with your own API keys
 # then rename to .env when you are done
 
+REACT_LOCAL_PORT=3000
+REACT_DOCKER_PORT=80
+FAST_REFRESH=false
+
 # create an account at https://account.mapbox.com/
 # then follow the docs to create your own key
 # both of the following can be the same
@@ -13,5 +17,5 @@ REACT_APP_EMAILJS_SERVICE_ID=
 REACT_APP_EMAILJS_TEMPLATE_ID=
 REACT_APP_EMAILJS_PUBLIC_KEY=
 
-# allow hot reload
-FAST_REFRESH = false
+REACT_APP_API_PREFIX='http://localhost:5000'
+REACT_APP_FILE_SERVER_PREFIX='http://localhost:5000'
